--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
   <!-- Стоимость -->
   <section class=" bg-light text-center padding">
     <div class="container">
-      <h1 class="display-3">Стоимость 14 тыс.</h1>
-      <h1 class="display-4">При оплате до 20 ноября 12 тыс</h1>
+      <h1 class="display-3">Стоимость 14 000 руб</h1>
+      <h1 class="display-4">При оплате до 20 ноября 12 000 руб</h1>
   </section>
 
   <!-- Оставить заявку -->
@@ -143,7 +143,7 @@
   <section class=" bg-light text-center padding">
     <div class="container">
       <p class="lead mb-1">
-        <h1 class="display-4">О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</h1>
+        <h1 class="display-4">О тренинге</h1>
       </p>
       <br />
 
@@ -151,11 +151,116 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
+      <br />
+      <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</p>
   </section>
 
 
   <!-- Для кого -->
   <section class=" bg-showcase-1 padding">
+    <div class="container">
+      <div>
+
+        <!-- 1 -->
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                <h1 class="display-4">Для кого?</h1>
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <p>Вам к нам, если</p>
+              <ul>
+                <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте
+                  и т.д. и все
+                  равно не успеваете следить за всеми трендами </li>
+                <li>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу,
+                  но принципиально не читаете (отбили желание с детства в школе) мы вернём вам
+                  счастливое
+                  детство/чтение</li>
+                <li>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии
+                  и сидите
+                  ночами за книгами) Верните в своё расписание заслуженное время для личной жизни</li>
+                <li>хотите открыть для себя новую 4D-реальность. Дёшево и полезно для здоровья :) Кинотеатр
+                  у вас
+                  в голове по цене бумажной книги</li>
+                <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего
+                  не запомнили. Приходится постоянно перечитывать?</li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+
+        <!-- 2 -->
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="false" aria-controls="collapseTwo">
+                <h1 class="display-4">Результаты</h1>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
+                  в минуту)</li>
+                <li>У вас появится (или усилится) желание читать</li>
+                <li>Перестанете отвлекаться во время чтения</li>
+                <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
+                  с <nobr>40-60%</nobr>
+                  при обычном чтении)</li>
+                <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
+                  в зависимости от целей чтения и вида литературы</li>
+                <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
+                  в дальнейшем</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- 3 -->
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+                aria-expanded="false" aria-controls="collapseThree">
+                <h1 class="display-4">Уникальность тренинга</h1>
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
+                <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
+                <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
+                  реально
+                  работающие упражнения</li>
+                <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото, видео, музыка</li>
+                <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
+                  процесс</li>
+                <li>Побочные эффекты: развитие памяти и воображения</li>
+                <li>Посттренинговое сопровождение</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+  </section>
+
+
+  <!-- Для кого -->
+  <!-- <section class=" bg-showcase-1 padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Для кого?</h1>
@@ -163,62 +268,63 @@
       <div>
 
         <br />
-        <p>Вам к&nbsp;нам, если</p>
-        <p>—&nbsp;читаете уже везде, на&nbsp;кухне, в&nbsp;душе, в&nbsp;ванной, в&nbsp;самолёте
-          и&nbsp;т.д.&nbsp;и&nbsp;все
-          равно не&nbsp;успеваете следить за&nbsp;всеми трендами </p>
-        <p>—&nbsp;хочется выглядеть приличным человеком, обсуждать последние книжные новинки и&nbsp;поддержать беседу,
-          но&nbsp;принципиально не&nbsp;читаете (отбили желание с&nbsp;детства в&nbsp;школе) мы&nbsp;вернём вам
+        <p>Вам к нам, если</p>
+        <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте
+          и т.д. и все
+          равно не успеваете следить за всеми трендами </li>
+        <li>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу,
+          но принципиально не читаете (отбили желание с детства в школе) мы вернём вам
           счастливое
-          детство/чтение</p>
-        <p>—&nbsp;вы&nbsp;студент (все вокруг гуляют ночами, а&nbsp;вы&nbsp;не&nbsp;успеваете к&nbsp;сессии
-          и&nbsp;сидите
-          ночами за&nbsp;книгами) Верните в&nbsp;своё расписание заслуженное время для личной жизни</p>
-        <p>—&nbsp;хотите открыть для себя новую 4Dреальность. Дёшево и&nbsp;полезно для здоровья J&nbsp;Кинотеатр
-          у&nbsp;вас
-          в&nbsp;голове по&nbsp;цене бумажной книги</p>
-        <p>—&nbsp;закрыв книгу вы&nbsp;понимаете, что пока читали всё время думали о&nbsp;своём и&nbsp;ничего
-          не&nbsp;запомнили. Приходится постоянно перечитывать?</p>
+          детство/чтение</li>
+        <li>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии
+          и сидите
+          ночами за книгами) Верните в своё расписание заслуженное время для личной жизни</li>
+        <li>хотите открыть для себя новую 4D-реальность. Дёшево и полезно для здоровья :) Кинотеатр
+          у вас
+          в голове по цене бумажной книги</li>
+        <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего
+          не запомнили. Приходится постоянно перечитывать?</li>
       </div>
-  </section>
+  </section> -->
 
   <!-- Результаты -->
-  <section class=" bg-light padding">
+  <!-- <section class=" bg-light padding">
     <div class="container">
       <div class="text-center ">
-        <h1 class="display-4">Результаты</h1>
+        <h1 class="display-4">Результаты</h1><br />
       </div>
       <div>
-        <p>По&nbsp;результатам тренинга</p>
-        <p>1) За&nbsp;2&nbsp;дня скорость возрастёт в&nbsp;<nobr>2-3</nobr> раза (1500&nbsp;— 6&nbsp;000 знаков
-          в&nbsp;минуту)</p>
-        <p>2) У&nbsp;вас появится (или усилится) желание читать</p>
-        <p>3) Перестанете отвлекаться во&nbsp;время чтения</p>
-        <p>4) Вы&nbsp;сможете лучше понимать текст (на&nbsp;<nobr>80-100%</nobr> при скорочтении, в&nbsp;сравнении
-          с&nbsp;<nobr>40-60%</nobr>
-          при обычном чтении)</p>
-        <p>5) Появится свобода выбора: как читать&nbsp;— старой стратегией медленного чтения или принципиально новой
-          в&nbsp;зависимости от&nbsp;целей чтения и&nbsp;вида литературы</p>
-        <p>6) Узнаете и&nbsp;освоите инструменты, с&nbsp;помощью которых сможете ещё увеличить свою скорость
-          в&nbsp;дальнейшем</p>
-        <p>Преимущества нашей методики</p>
-        <p>1) Экспресс-метод за&nbsp;2&nbsp;дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</p>
-        <p>2) Авторская методика с&nbsp;реальных людей, развивших в&nbsp;себе этот навык</p>
-        <p>3) Лучшие практики на&nbsp;базе исследовательской мастерской. Многолетний опыт .... и&nbsp;отобраны только
+        <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
+          в минуту)</li>
+        <li>У вас появится (или усилится) желание читать</li>
+        <li>Перестанете отвлекаться во время чтения</li>
+        <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
+          с <nobr>40-60%</nobr>
+          при обычном чтении)</li>
+        <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
+          в зависимости от целей чтения и вида литературы</li>
+        <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
+          в дальнейшем</li>
+
+        <h1 class="display-4">Уникальность тренинга</h1><br />
+
+        <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
+        <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
+        <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
           реально
-          работающие упражнения</p>
-        <p>4) Сам тренинг максимально кайфовый по&nbsp;настроению и&nbsp;атмосфере, наполнению фото/видео/музыка.</p>
-        <p>5) Работа не&nbsp;только с&nbsp;мозгом, но&nbsp;и&nbsp;с&nbsp;эмоциями и&nbsp;с&nbsp;телом&nbsp;— целостный
-          процесс</p>
-        <p>6) Побочные эффекты: развитие памяти и&nbsp;воображения</p>
-        <p>7) Посттренинговое сопровождение</p>
+          работающие упражнения</li>
+        <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото/видео/музыка.</li>
+        <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
+          процесс</li>
+        <li>Побочные эффекты: развитие памяти и воображения</li>
+        <li>Посттренинговое сопровождение</li>
       </div>
 
-  </section>
+  </section> -->
 
 
   <!-- 5 Зачем ? -->
-  <section class="features-icons bg-showcase-1 text-center">
+  <!-- <section class="features-icons bg-showcase-1 text-center">
     <div class="container">
       <h1 class="display-4">Зачем?</h1>
       <br /><br />
@@ -252,7 +358,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
