--- a/index.html
+++ b/index.html
@@ -463,8 +463,7 @@
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"
                 aria-expanded="false" aria-controls="collapseFive">
-                Часть 5 «Чем глубже в лес, тем толще понимание» (может быть тоньше, вместо толще, тогда хуже
-                фрейдоманский слой, но изящество добавляется?)
+                Часть 5 «Чем глубже в лес, тем толще понимание»
               </button>
             </h5>
           </div>
@@ -495,13 +494,13 @@
 
       <div>
         <p>
-          <ul class="list-group">
-            <li class="list-group-item"><span>2 дня </span></li>
-            <li class="list-group-item"><span>суббота воскресенье</span></li>
-            <li class="list-group-item"><span>просторный оборудованный зал</span><span> </span></li>
-            <li class="list-group-item"><span>с 10 до 20 (1,5 часа обед)</span></li>
-            <li class="list-group-item"><span>+ каждые 1,5 - 2 часа кофебрейки</span></li>
-            <li class="list-group-item"><span>книги и другие рабочие материалы, гостеприимная атмосфера и интересные
+          <ul>
+            <li><span>2 дня </span></li>
+            <li><span>суббота - воскресенье</span></li>
+            <li><span>просторный оборудованный зал</span><span> </span></li>
+            <li><span>с 10 до 20 (1,5 часа обед)</span></li>
+            <li><span>+ каждые 1,5 - 2 часа кофебрейки</span></li>
+            <li><span>книги и другие рабочие материалы, гостеприимная атмосфера и интересные
                 участники :) включены в стоимость тренинга</span></li>
           </ul>
         </p>
