--- a/index.html
+++ b/index.html
@@ -553,18 +553,23 @@
 
         <p>Татьяна Карпицкая, тренер НЛП, бизнес-тренер, бизнес- консультант, по&nbsp;первому образованию закончила
           аспирантуру по&nbsp;специальности филология <em>подробнее о&nbsp;достижениях...</em></p>
-        <p>(это видная часть сразу, ниже&nbsp;то, что выпадает при открытии блока)</p>
-        <p>Татьяна Карпицкая&nbsp;— тренер НЛП, бизнес-тренер, бизнес-консультант. По&nbsp;первому образованию учитель
-          русского языка и&nbsp;литературы, закончила аспирантуру по&nbsp;специальности филология, имеет ряд научных
-          публикаций по&nbsp;инструментам воздействия художественного текста на&nbsp;восприятие, психику.</p>
-        <p>Тренер курса «Скорочтение» с&nbsp;2014&nbsp;года. За&nbsp;это время обучила несколько сотен учеников
-          в&nbsp;различных регионах России (Москва, Краснодар, Красноярск, Уфа, Санкт-Петербург)</p>
-        <p>Создатель <nobr>4-х</nobr> авторских концептов курса НЛП-практик: «Жизнь в&nbsp;удовольствие», «НЛП
-          в&nbsp;бизнесе», «НЛП для&nbsp;hr», «MyWay» а&nbsp;также других тренингов личностного роста и&nbsp;развития
-          сверхспособностей («Мозг на&nbsp;100%», «Кто ясно мыслит, тот ясно излагает», «Нлп на&nbsp;грани
-          и&nbsp;за&nbsp;гранью»).</p>
-        <p>С&nbsp;2006 по&nbsp;2013 год сделала успешную карьеру в&nbsp;бизнесе, собственник бизнесов в&nbsp;нескольких
-          отраслях.</p>
+
+
+        <div>
+          <p>Татьяна Карпицкая&nbsp;— тренер НЛП, бизнес-тренер, бизнес-консультант. По&nbsp;первому образованию
+            учитель
+            русского языка и&nbsp;литературы, закончила аспирантуру по&nbsp;специальности филология, имеет ряд научных
+            публикаций по&nbsp;инструментам воздействия художественного текста на&nbsp;восприятие, психику.</p>
+          <p>Тренер курса «Скорочтение» с&nbsp;2014&nbsp;года. За&nbsp;это время обучила несколько сотен учеников
+            в&nbsp;различных регионах России (Москва, Краснодар, Красноярск, Уфа, Санкт-Петербург)</p>
+          <p>Создатель <nobr>4-х</nobr> авторских концептов курса НЛП-практик: «Жизнь в&nbsp;удовольствие», «НЛП
+            в&nbsp;бизнесе», «НЛП для&nbsp;hr», «MyWay» а&nbsp;также других тренингов личностного роста и&nbsp;развития
+            сверхспособностей («Мозг на&nbsp;100%», «Кто ясно мыслит, тот ясно излагает», «Нлп на&nbsp;грани
+            и&nbsp;за&nbsp;гранью»).</p>
+          <p>С&nbsp;2006 по&nbsp;2013 год сделала успешную карьеру в&nbsp;бизнесе, собственник бизнесов
+            в&nbsp;нескольких
+            отраслях.</p>
+        </div>
       </div>
     </div>
     <br /><br />
@@ -623,16 +628,16 @@
         <h1 class="display-4">Контакты организаторов</h1><br />
       </div>
       <div>
-        <p>Москва</p>
-        <p>Тел +7 977 990 5640 (Сергей / Ирина)</p>
-        <p>Красноярск</p>
-        <p>WatsApp +7 913 837 6167 (Татьяна)</p>
-        <p>Краснодар</p>
-        <p>WatsApp +7 918 318 8335 (Татьяна)</p>
-        <p>Санкт-Петербург</p>
-        <p>WatsApp +7 931 320 9606 (Анна)</p>
-        <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, </p>
-        <p>по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам</p>
+        <div><strong>&lt;p&gt;Москва&lt;/p&gt;</strong></div>
+        <div> &lt;p&gt;Тел +7 977 990 5640 (Сергей / Ирина)&lt;/p&gt;</div>
+        <div><strong> &lt;p&gt;Красноярск&lt;/p&gt;</strong></div>
+        <div> &lt;p&gt;WatsApp +7 913 837 6167 (Татьяна)&lt;/p&gt;</div>
+        <div><strong> &lt;p&gt;Краснодар&lt;/p&gt;</strong></div>
+        <div> &lt;p&gt;WatsApp +7 918 318 8335 (Татьяна)&lt;/p&gt;</div>
+        <div><strong> &lt;p&gt;Санкт-Петербург&lt;/p&gt;</strong></div>
+        <div> &lt;p&gt;WatsApp +7 931 320 9606 (Анна)&lt;/p&gt;</div>
+        <div> &lt;p&gt;Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, &lt;/p&gt;</div>
+        <div> &lt;p&gt;по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам&lt;/p&gt;</div>
       </div>
   </section>
 
