--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
 
   <!-- 5 Зачем ? -->
-  <!-- <section class="features-icons bg-showcase-1 text-center">
+  <section class="features-icons bg-showcase-1 text-center">
     <div class="container">
       <h1 class="display-4">Зачем?</h1>
       <br /><br />
@@ -358,7 +358,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
 
 
