--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
 
   <!-- Стоимость -->
-  <section class=" bg-light text-center padding">
+  <section class="price bg-light text-center padding">
     <div class="container">
-      <h1 class="display-3">Стоимость 14 000 руб</h1>
-      <h1 class="display-4">При оплате до 20 ноября 12 000 руб</h1>
+      <h1 class="display-3">Стоимость 14 000 ₽</h1>
+      <h1 class="display-4">При оплате до 20 ноября <span class="sale">12 000 ₽</span></h1>
   </section>
 
   <!-- Оставить заявку -->
@@ -563,7 +563,8 @@
           <p>Тренер курса «Скорочтение» с&nbsp;2014&nbsp;года. За&nbsp;это время обучила несколько сотен учеников
             в&nbsp;различных регионах России (Москва, Краснодар, Красноярск, Уфа, Санкт-Петербург)</p>
           <p>Создатель <nobr>4-х</nobr> авторских концептов курса НЛП-практик: «Жизнь в&nbsp;удовольствие», «НЛП
-            в&nbsp;бизнесе», «НЛП для&nbsp;hr», «MyWay» а&nbsp;также других тренингов личностного роста и&nbsp;развития
+            в&nbsp;бизнесе», «НЛП для&nbsp;hr», «My&nbsp;Way» а&nbsp;также других тренингов личностного роста
+            и&nbsp;развития
             сверхспособностей («Мозг на&nbsp;100%», «Кто ясно мыслит, тот ясно излагает», «Нлп на&nbsp;грани
             и&nbsp;за&nbsp;гранью»).</p>
           <p>С&nbsp;2006 по&nbsp;2013 год сделала успешную карьеру в&nbsp;бизнесе, собственник бизнесов
@@ -628,16 +629,16 @@
         <h1 class="display-4">Контакты организаторов</h1><br />
       </div>
       <div>
-        <div><strong>&lt;p&gt;Москва&lt;/p&gt;</strong></div>
-        <div> &lt;p&gt;Тел +7 977 990 5640 (Сергей / Ирина)&lt;/p&gt;</div>
-        <div><strong> &lt;p&gt;Красноярск&lt;/p&gt;</strong></div>
-        <div> &lt;p&gt;WatsApp +7 913 837 6167 (Татьяна)&lt;/p&gt;</div>
-        <div><strong> &lt;p&gt;Краснодар&lt;/p&gt;</strong></div>
-        <div> &lt;p&gt;WatsApp +7 918 318 8335 (Татьяна)&lt;/p&gt;</div>
-        <div><strong> &lt;p&gt;Санкт-Петербург&lt;/p&gt;</strong></div>
-        <div> &lt;p&gt;WatsApp +7 931 320 9606 (Анна)&lt;/p&gt;</div>
-        <div> &lt;p&gt;Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, &lt;/p&gt;</div>
-        <div> &lt;p&gt;по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам&lt;/p&gt;</div>
+        <p><strong>Москва</strong></p>
+        <p>Тел +7 977 990 5640 (Сергей / Ирина)</p>
+        <p><strong>Красноярск</strong></p>
+        <p>WatsApp +7 913 837 6167 (Татьяна)</p>
+        <p><strong>Краснодар</strong></p>
+        <p>WatsApp +7 918 318 8335 (Татьяна)</p>
+        <p><strong>Санкт-Петербург</strong></p>
+        <p>WatsApp +7 931 320 9606 (Анна)</p>
+        <p>Расписание открытых тренингов на 2019 год мы опубликуем в декабре 2019, </p>
+        <p>по вопросам проведения тренинга в корпоративном формате обращайтесь к организаторам</p>
       </div>
   </section>
 
@@ -688,7 +689,7 @@
   </section> -->
 
   <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <!-- <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
@@ -716,7 +717,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <!-- Call to Action -->
@@ -749,7 +750,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
+          <!-- <ul class="list-inline mb-2">
             <li class="list-inline-item">
               <a href="#">About</a>
             </li>
@@ -765,8 +766,8 @@
             <li class="list-inline-item">
               <a href="#">Privacy Policy</a>
             </li>
-          </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+          </ul> -->
+          <p class="text-muted small mb-4 mb-lg-0">&copy; sch-em.ru 2018. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
