--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-12 mx-auto">
-          <h1 class="display-1" style="font-weight: 600; font-size:3.4rem; padding-bottom: 30px ">Тренинг <br />"Скорочтение
+          <h1 class="display-1" style="font-weight: 500; font-size:2.8rem; padding-bottom: 30px ">Тренинг <br />"Скорочтение
             экспресс-методом"</h1>
-          <h1 class="display-4" style="font-weight: 300; font-size:3.4rem">8-9 декабря, Москва</h1>
+          <h1 class="display-4" style="font-weight: 300; font-size:2.4rem">8-9 декабря, Москва</h1>
         </div>
         <!-- <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
@@ -86,76 +86,48 @@
   </header>
 
 
-  <!-- Стоимость -->
-  <section class="price bg-light text-center padding">
+
+  <!-- 5 Зачем ? -->
+  <section class="features-icons bg-showcase-1 text-center">
     <div class="container">
-      <div class="col-lg-12">
-        <h1 class="display-3">Стоимость 14&nbsp;000&nbsp;₽</h1>
-        <h1 class="display-4">При оплате до 20 ноября <span class="sale">12&nbsp;000&nbsp;₽</span></h1>
-      </div>
-  </section>
-
-  <!-- Оставить заявку -->
-  <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text text-center">
-          <h2>Оставить заявку</h2>
-          <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
-            <div class="form-group">
-              <!-- <label for="exampleInputEmail1">Ваш Email или номер телефона</label> -->
-              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ваш email или телефон">
-              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+      <h1 class="display-4">Зачем?</h1>
+      <br /><br />
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-kiss-beam m-auto text-primary"></i>
             </div>
-            <div class="form-group">
-              <!-- <label for="exampleInputPassword1">ФИО</label> -->
-              <input type="name" name="message" class="form-control" id="exampleInputPassword1" placeholder="ФИО">
+            <h3>Удовольствие!</h3>
+            <p class="lead mb-0">Получать удовольствие от чтения</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-piggy-bank m-auto text-primary"></i>
             </div>
-            <button type="submit" class="btn btn-primary">Оставить заявку</button>
-          </form>
+            <h3>Время!</h3>
+            <p class="lead mb-0">Экономить время</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-brain m-auto text-primary"></i>
+            </div>
+            <h3>Понимание!</h3>
+            <p class="lead mb-0">Улучшить понимание и запоминание информации</p>
+          </div>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text  text-center">
-          <h2>Обратный звонок</h2>
-          <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
-            <div class="form-group">
-              <!-- <label for="exampleInputEmail1">Ваш Email или номер телефона</label> -->
-              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Ваш номер телефона">
-              <input type="hidden" name="message" value="Обратный звонок" />
-            </div>
-            <button type="submit" class="btn btn-dark">Обратный звонок</button>
-          </form>
-        </div>
-      </div>
-
     </div>
   </section>
 
 
-  <!-- Легендарный -->
-  <section class=" bg-light text-center padding">
-    <div class="container">
-      <p class="lead mb-1">
-        <h1 class="display-4">О тренинге</h1>
-      </p>
-      <br />
-
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <br />
-      <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</p>
-  </section>
 
 
-  <!-- кому полезен тренинг -->
+  <!-- кому полезен acordion -->
   <!-- <section class=" bg-showcase-1 padding">
     <div class="container">
       <div>
@@ -257,8 +229,8 @@
   </section> -->
 
 
-  <!-- Для кого -->
-  <section class=" bg-showcase-1 padding">
+  <!-- Кому полезен -->
+  <section class=" bg-light padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Кому полезен тренинг?</h1><br />
@@ -273,29 +245,8 @@
       </div>
   </section>
 
-  <!-- Результаты -->
-  <section class=" bg-light padding">
-    <div class="container">
-      <div class="text-center ">
-        <h1 class="display-4">Результаты</h1><br />
-      </div>
-      <div>
-        <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
-          в минуту)</li>
-        <li>У вас появится (или усилится) желание читать</li>
-        <li>Перестанете отвлекаться во время чтения</li>
-        <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
-          с <nobr>40-60%</nobr>
-          при обычном чтении)</li>
-        <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
-          в зависимости от целей чтения и вида литературы</li>
-        <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
-          в дальнейшем</li>
-      </div>
-
-  </section>
-  <!-- Результаты -->
-  <section class=" bg-light padding">
+  <!-- Уникальность -->
+  <section class=" bg-showcase-1 padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Уникальность тренинга</h1><br />
@@ -316,52 +267,87 @@
 
   </section>
 
-
-
-
-
-
-  <!-- 5 Зачем ? -->
-  <section class="features-icons bg-showcase-1 text-center">
+  <!-- Результаты -->
+  <section class="bg-light padding">
     <div class="container">
-      <h1 class="display-4">Зачем?</h1>
-      <br /><br />
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="fas fa-kiss-beam m-auto text-primary"></i>
+      <div class="text-center ">
+        <h1 class="display-4">Результаты</h1><br />
+      </div>
+      <div>
+        <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
+          в минуту)</li>
+        <li>У вас появится (или усилится) желание читать</li>
+        <li>Перестанете отвлекаться во время чтения</li>
+        <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
+          с <nobr>40-60%</nobr>
+          при обычном чтении)</li>
+        <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
+          в зависимости от целей чтения и вида литературы</li>
+        <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
+          в дальнейшем</li>
+      </div>
+
+  </section>
+
+
+  <!-- Оставить заявку -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text text-center">
+          <h2>Оставить заявку</h2>
+          <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
+            <div class="form-group">
+              <!-- <label for="exampleInputEmail1">Ваш Email или номер телефона</label> -->
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Ваш email или телефон">
+              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
-            <h3>Удовольствие!</h3>
-            <p class="lead mb-0">Получать удовольствие от чтения</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="fas fa-piggy-bank m-auto text-primary"></i>
+            <div class="form-group">
+              <!-- <label for="exampleInputPassword1">ФИО</label> -->
+              <input type="name" name="message" class="form-control" id="exampleInputPassword1" placeholder="ФИО">
             </div>
-            <h3>Время!</h3>
-            <p class="lead mb-0">Экономить время</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="fas fa-brain m-auto text-primary"></i>
-            </div>
-            <h3>Понимание!</h3>
-            <p class="lead mb-0">Улучшить понимание и запоминание информации</p>
-          </div>
+            <button type="submit" class="btn btn-primary">Оставить заявку</button>
+          </form>
         </div>
       </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 my-auto showcase-text  text-center">
+          <h2>Обратный звонок</h2>
+          <form method="POST" action="https://formspree.io/t_karpick@bk.ru">
+            <div class="form-group">
+              <!-- <label for="exampleInputEmail1">Ваш Email или номер телефона</label> -->
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Ваш номер телефона">
+              <input type="hidden" name="message" value="Обратный звонок" />
+            </div>
+            <button type="submit" class="btn btn-dark">Обратный звонок</button>
+          </form>
+        </div>
+      </div>
+
     </div>
+  </section>
+  
+
+  <!-- Стоимость -->
+  <section class="price bg-light text-center padding">
+    <div class="container">
+      <div class="col-lg-12">
+        <h1 class="display-3">Стоимость 14&nbsp;000&nbsp;₽</h1>
+        <h1 class="display-4">При оплате до 20 ноября <span class="sale">12&nbsp;000&nbsp;₽</span></h1>
+      </div>
   </section>
 
 
 
+
+
   <!-- 6 Программа тренинга -->
-  <section class=" bg-light  padding">
+  <section class="  padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Программа тренинга</h1>
@@ -479,10 +465,8 @@
   </section>
 
 
-
-
-  <!-- 7 Формат тренинга -->
-  <section class=" bg-showcase-1 padding">
+  <!-- 7 Формат тренинга + ФОТО -->
+  <section class="bg-light padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Формат тренинга</h1>
@@ -513,46 +497,48 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row text-center text-lg-left">
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/1.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/2.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/3.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/4.JPG" alt="">
                   </a>
                 </div>
               </div>
+              </div>
             </div>
             <div class="carousel-item">
               <div class="row text-center text-lg-left">
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/5.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/6.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/7.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-xs-3">
+                <div class="col-lg-3 col-md-3 col-sm-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/8.JPG" alt="">
                   </a>
@@ -584,6 +570,24 @@
 
 
 
+
+  <!-- ВИДЕО Легендарный -->
+  <section class="text-center padding">
+      <div class="container">
+        <p class="lead mb-1">
+          <h1 class="display-4">О тренинге</h1>
+        </p>
+        <br />
+  
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/JASQPFO0nzo" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+        <br />
+        <p>О тренинге, его создании и слушателях рассказывает автор методики Андрей Кениг</p>
+    </section>
+
+    
 
 
   <!-- 8 о тренере -->
@@ -650,7 +654,7 @@
 
 
   <!-- 8 Отзывы ВИДЕО -->
-  <section class=" bg-showcase-1 padding">
+  <section class="padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Отзывы</h1><br />
